@@ -1,52 +1,59 @@
 package com.human.web_board.security;
 
 import com.human.web_board.dto.MemberRes;
-import lombok.extern.java.Log;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.time.LocalDateTime;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
+/**
+ * Spring Security에서 인증된 사용자 정보를 담는 클래스
+ */
+@Getter
 public class CustomUserDetails implements UserDetails {
 
-    private final MemberRes memberRes;
+    private Long id;
+    private String email;
+    private String password;   // pwd
+    private String nickname;
+    private String grade;
+    private LocalDateTime regDate;
+    private String profileImg;
 
-    public CustomUserDetails(MemberRes memberRes) {
-        this.memberRes = memberRes;
+    /** MemberRes → CustomUserDetails 로 변환하는 생성자 */
+    public CustomUserDetails(MemberRes member) {
+        this.id = member.getId();
+        this.email = member.getEmail();
+        this.password = member.getPwd();
+        this.nickname = member.getNickname();
+        this.grade = member.getGrade();
+        this.regDate = member.getRegDate();
+        this.profileImg = member.getProfileImg();
     }
 
-    @Override
-    public String getUsername() {
-        return memberRes.getEmail(); // 로그인 식별자
-    }
-
-    @Override
-    public String getPassword() {
-        return memberRes.getPwd(); // 암호화된 비밀번호
-    }
-
+    /** ROLE_USER 기본 권한 */
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_USER")); // 기본 권한
+        return Collections.emptyList(); // 권한이 필요하면 ROLE_USER 등 추가 가능
+    }
+
+    /** Spring Security에서 username = email */
+    @Override
+    public String getUsername() {
+        return this.email;
+    }
+
+    /** 비밀번호 반환 */
+    @Override
+    public String getPassword() {
+        return this.password;
     }
 
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
     @Override public boolean isEnabled() { return true; }
-
-    // 👉 우리가 쓰고 싶은 정보들
-    public Long getId() {
-        return memberRes.getId();
-    }
-
-    public String getNickname() {
-        return memberRes.getNickname();
-    }
-
-    public MemberRes getMember() {
-        return memberRes;
-    }
 }
